[package]
name = "encoded-words"
version = "0.2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
documentation = "https://docs.rs/encoded-words/"
repository = "https://github.com/async-email/encoded-words"
homepage = "https://github.com/async-email/encoded-words"
description = "Encoded Words for usage in MIME headers"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2018"


[dependencies]
thiserror = "1.0.9"
regex = { version = "1.3.1", default-features = false, features = ["std"] }
lazy_static = "1.4.0"
hex = "0.4.0"
base64 = "0.12.0"
charset = "0.1.2"
encoding_rs = "0.8.20"
